<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skywrite for Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to SkyWrite!</string>
    <string name="edit_username">Username</string>
    <string name="edit_pass">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="login_send">Login</string>
    <string name="title_activity_main_page">Welcome!</string>
    <string name="create_user">Create User</string>
    <string name="register_user">Register New User</string>
    <string name="title_activity_new_user">New User</string>
    <string name="title_activity_new_user_failure">Create User Failure</string>
    <string name="proceed_to_skywrite">Proceed to Skywrite</string>
    <string name="title_activity_skywrite">Skywrite</string>
    <string name="make_cloud">Make a Cloud</string>
    <string name="refresh_page">Refresh</string>
    <string name="title_activity_cloud_maker">Cloud Maker</string>
    <string name="text">Text: </string>
    <string name="submit">Submit</string>
    <string name="title_activity_sky_write_cloud">Cloud Details</string>
    <string name="cumulate">Add Cumulus</string>

</resources>
