<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".NewUser" >

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:textColor="@color/black"
        android:background="@color/white"
        android:hint="@string/edit_username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="@color/black"
        android:background="@color/white"
        android:hint="@string/edit_pass" >
    </EditText>

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_pass"
        android:layout_below="@+id/edit_pass"
        android:layout_marginTop="18dp"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="@color/black"
        android:background="@color/white"
        android:hint="@string/confirm_pass" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register_user"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:textColor="@color/white"
        android:onClick="validateAndCreateUser"
        android:text="@string/create_user" />
    
</RelativeLayout>
